# YoutubePlaylistSyncThing

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-release.yml  build_v2.yml  integration.yml  unit-tests.yml
config/: yt-playlist-config.example.json
docker/: .dockerignore
plans/: project plan.md
src/app/: __init__.py  cli.py  main.py
src/app/config/: __init__.py  settings.py
src/app/core/: __init__.py  models.py
src/app/core/database/: __init__.py  db.py
src/app/core/download/: downloader.py  queue_manager.py  workers.py
src/app/core/events/: event_bus.py
src/app/core/scanner/: playlist_scanner.py
src/app/core/scheduler/: scheduler.py
src/app/core/sync/: diff_engine.py  executor.py  filesystem.py  service.py
src/app/core/utils/: logging_setup.py  naming.py
src/app/gui/: main.py  runner.py
src/app/gui/pages/: playlists.py  settings.py
src/old/: __init__.py  cli.py  config.py  downloader.py  manager.py
tests/: dummy_config.py  integration_full_workflow_test.py  test_cli_flags.py  test_cli_update_and_logging.py  test_config_loader_basic.py  test_download_quality_format.py  test_download_video_edgecases.py  test_downloader_sanitize_and_path.py  test_event_surface.py  test_fetch_videos.py  test_integration_audio.py  test_integration_both.py  test_integration_video.py  test_manager_connection_warning.py  test_renumber_and_cleanup.py  test_reorder_and_delete.py  test_settings_default_config.py
